# sens

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
src/: cli.rs  games.rs  main.rs  math.rs  parsers.rs
src/commands/: cm.rs  convert.rs  list.rs  mod.rs
