[package]
name = "sens"
description = "Convert mouse sensitivity between games via CLI."
repository = "https://github.com/junapur/sens"
authors = ["June <junapur@proton.me>"]
license = "MIT"
version = "2.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = "debuginfo"
