[package]
name = "sens"
description = "A sensitivity conversion tool for terminal nerds."
repository = "https://github.com/junapur/sens"
authors = ["June <junapur@proton.me>"]
license = "MIT"
version = "2.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = "debuginfo"
