[package]
name = "sens"
description = "A sensitivity conversion tool for terminal nerds."
repository = "https://github.com/junapur/sens"
authors = ["June <junapur@proton.me>"]
license = "MIT"
version = "2.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = "debuginfo"
